# SentimentAssistant

./: .env.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  README.md  app.py  config.py  evaluate.py  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
data/: sample_knowledge_base.json
modules/: customer_satisfaction.py  escalation_predictor.py  evaluation.py  knowledge_processor.py  response_generator.py  sentiment_analysis.py  vector_store.py
tests/: test_chunking.py  test_satisfaction.py
utils/: helpers.py
