[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "pinecone>=7.3.0",
    "plotly>=6.3.0",
    "streamlit>=1.48.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.1",
]
